--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li><a href="#citacoes">Menções</a></li>
                     <li><a href="#grid-one">Platão</a></li>
                     <li><a href="#gallery">Galeria</a></li>
-                    <li><a href="#pricing">Pricing</a></li>
+                    <li><a href="#pricing">A alma</a></li>
                     <li><a href="#monografia">Monografia</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
