--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                     <li><a href="#citacoes">Menções</a></li>
                     <li><a href="#grid-one">Platão</a></li>
                     <li><a href="#gallery">Galeria</a></li>
-                    <li><a href="#pricing">A alma</a></li>
                     <li><a href="#monografia">Monografia</a></li>
+                    <li><a href="#pricing">A alma</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -37,7 +37,7 @@
     <section id="intro" class="intro main-bg section">
         <div class="main-content intro-content">
             <div class="intro-text-content">
-                <h2>A questão pitagórica </h2>
+                <h2 class="resize">A questão pitagórica </h2>
                 <p>Muitos são os obstáculos ao estudar e falar sobre o pitagorismo, visto que essa escola
                     filosófica considerava como segredo as suas doutrinas, a que somente os adeptos tinham acesso.
                     Existe uma grande questão se Pitágoras e seus primeiros estudantes de fato deixaram obras
@@ -123,7 +123,7 @@
     <section id="monografia" class="monografia main-bg section">
         <div class="main-content top3-content">
             <div class="intro-text-content1">
-                <h2>Monografia</h2>
+                <h2 class="resize">Monografia</h2>
                 <p>Monografia realizada em 2024 por Thales Oliveira Ribeiro.</p>
                 
             </div>
@@ -206,7 +206,7 @@
     <section id="contact" class="intro main-bg section">
         <div class="main-content intro-content">
             <div class="intro-text-content">
-                <h2>A questão pitagórica </h2>
+                <h2 class="resize">A questão pitagórica </h2>
                 <p>Muitos são os obstáculos ao estudar e falar sobre o pitagorismo, visto que essa escola
                     filosófica considerava como segredo as suas doutrinas, a que somente os adeptos tinham acesso.
                     Existe uma grande questão se Pitágoras e seus primeiros estudantes de fato deixaram obras
